--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,31 @@
 version: 2.1
 orbs:
-  aws-code-deploy: circleci/aws-code-deploy@0.0.10
+  aws-code-deploy: circleci/aws-code-deploy@1.0.0
+
+jobs:
+	dev-job:
+	  - aws-code-deploy/deploy:
+		  application-name: myApplication
+		  deployment-group: myDeploymentGroup1
+		  service-role-arn: arn:aws:iam::801391952744:role/CodeDeployServiceRole-new
+		  bundle-bucket: angular-bucket-17
+		  bundle-key: myS3BucketKey
+	qa-job:
+	  - aws-code-deploy/deploy:
+		  application-name: myApplication
+		  deployment-group: myDeploymentGroup2
+		  service-role-arn: arn:aws:iam::801391952744:role/CodeDeployServiceRole-new
+		  bundle-bucket: angular-bucket-17
+		  bundle-key: myS3BucketKey
+	  
 workflows:
-  deploy_application:
-    jobs:
-      - aws-code-deploy/deploy:
-          application-name: myApplication
-          deployment-group: myDeploymentGroup
-          service-role-arn: arn:aws:iam::801391952744:role/CodeDeployServiceRole-new
-          bundle-bucket: angular-bucket-17
-          bundle-key: myS3BucketKey
+  deploy_application_dev:
+	jobs:
+		- dev-job
+			filters:
+				branches:
+					only: dev
+		- qa-job
+			filters:
+				branches:
+					only: qa
