--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,33 @@
 version: 2.1
 orbs: 
-  aws-code-deploy: circleci/aws-code-deploy@1.0.0
+  aws-code-deploy: circleci/aws-code-deploy@0.0.10
+  jobs: 
+    - aws-code-deploy/Devdeploy: 
+        application-name: demoapp-dev
+        bundle-bucket: angular-bucket-17
+        bundle-key: dev1
+        bundle-source: Build/
+        deployment-group: SimpleDemoDG
+        service-role-arn: "arn:aws:iam::801391952744:role/CodeDeployServiceRole"
+  
+    - aws-code-deploy/QAdeploy: 
+        application-name: demoapp-qa
+        bundle-bucket: myApplicationS3Bucket
+        bundle-key: qa1
+        bundle-source: Build/
+        deployment-group: ~
+        service-role-arn: "arn:aws:iam::801391952744:role/CodeDeployServiceRole"
+
+ 
 
 workflows: 
-  deploy_application_dev: 
-    jobs: 
-      - 
-        aws-code-deploy/deploy: 
-			application-name: myApplication
-			bundle-bucket: angular-bucket-17
-			bundle-key: myS3BucketKey
-			deployment-group: myDeploymentGroup1
-			service-role-arn: "arn:aws:iam::801391952744:role/CodeDeployServiceRole-new"
-			filters: 
-				branches: 
-				  only: dev
+  deploy_application: 
+  jobs: 
+    - aws-code-deploy/Devdeploy:  
+        filters: 
+          branches: 
+              only: master
+    - aws-code-deploy/QAdeploy: 
+        filters: 
+          branches: 
+              only: build-issues
